--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -61,7 +61,73 @@
     </script>
       
 
-    
+      <style>
+        /* Set the font family and color of the body */
+        body {
+          font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+          color: #333;
+        }
+      
+        /* Set the font size and weight of the header */
+        header {
+          font-size: 32px;
+          font-weight: bold;
+          padding: 20px;
+          text-align: center;
+          background-color: #6772e5;
+          color: #fff;
+        }
+      
+        /* Set the font size and weight of the section */
+        section {
+          font-size: 20px;
+          font-weight: bold;
+          padding: 20px;
+          text-align: center;
+        }
+      
+        /* Set the border and background color of the table */
+        table {
+          border-collapse: collapse;
+          background-color: #fff;
+          border: 1px solid #ddd;
+          margin: 0 auto;
+        }
+      
+        /* Set the padding and border of the table cells */
+        td {
+          padding: 10px;
+          border: 1px solid #ddd;
+        }
+      
+        /* Set the background color of the checkbox when checked */
+        input[type="checkbox"]:checked + label {
+          background-color: #6772e5;
+          color: #fff;
+        }
+      
+        /* Style the label for the checkbox */
+        label {
+          padding: 10px;
+          display: block;
+          cursor: pointer;
+        }
+      
+        /* Style the image */
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+      
+        /* Style the footer */
+        footer {
+          padding: 20px;
+          text-align: center;
+          background-color: #6772e5;
+          color: #fff;
+        }
+      </style>
+      
       
     
 </body>
