--- a/app/views/head.ejs
+++ b/app/views/head.ejs
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nowty</title>
 
+    <link rel="stylesheet" href="css/style.css">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+
 </head>
