--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,12 +14,11 @@
                 <input class="form-control" type="text" id="actividad-input" name="actividad-input">
             </div>
 
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                Button with data-target
-            </button>
-
-            <div class="" id="collapseExample">
-                <div class="card card-body">
+            <div class="card">
+                <div class="card-header" id="heading">
+                    <button class="accordion-btn" type="button">Opciones avanzadas</button>
+                </div>
+                <div class="card-body" id="opcionesAvanzadas">
 
                     <div class="form-group">
                         <label for="dropdown-select">Seleccionar tipo:</label>
@@ -181,53 +180,7 @@
             Nowty 2023
         </footer>
 
-        <script>
-            // add an event listener to each checkbox
-            const checkboxes = document.querySelectorAll('input[type=checkbox]');
-            checkboxes.forEach((checkbox) => {
-                checkbox.addEventListener('click', () => {
-                    const isChecked = checkbox.checked;
-                    const id = checkbox.id;
-
-                    // send a POST request to the server when the checkbox is clicked
-                    fetch('/done', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({ id, isChecked })
-                    })
-                        .then(response => {
-                            if (!response.ok) {
-                                throw new Error('Network response was not ok');
-                            }
-                            console.log('Checkbox status updated successfully');
-                        })
-                        .catch(error => {
-                            console.error('There was a problem updating the checkbox status:', error);
-                        });
-                });
-            });
-
-            const dateDropdown = document.getElementById("date-dropdown");
-            const porSemanaDiv = document.getElementById("porSemanaInputs");
-            const porFechaDiv = document.getElementById("porFechaInputs");
-
-            // add event listener to the date dropdown
-            dateDropdown.addEventListener("change", (event) => {
-                const selectedValue = event.target.value;
-                if (selectedValue === "por-semana") {
-                    // show the por-semana div and hide the por-fecha div
-                    porSemanaDiv.style.display = "block";
-                    porFechaDiv.style.display = "none";
-                } else if (selectedValue === "por-fecha") {
-                    // show the por-fecha div and hide the por-semana div
-                    porSemanaDiv.style.display = "none";
-                    porFechaDiv.style.display = "block";
-                }
-            });
-
-        </script>
+        <script src="js/script.js"></script>
 
     </body>
 
