Se agregó input para días de la semana. Se agregaron scripts para deshabilitar según opción de actividad o rutina.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -37,63 +37,26 @@
 
                     <div class="form-group">
                         <label for="imagen-input">Imagen:</label>
-                        <input type="file" class="form-control-file" id="imagen-input" class="form-control" name="imagen-input">
+                        <input type="file" class="form-control-file" id="imagen-input" class="form-control"
+                            name="imagen-input">
                     </div>
 
                     <div class="form-group">
                         <fieldset id="horas-input">
-                          <legend class="sr-only">Horas:</legend>
-                          <div class="checkbox-group">
-                            <% for (var i = 1; i <= 24; i++) { %>
-                                <label class="checkbox-container">
-                                  <input type="checkbox" name="horas-input" value="<%= i %>" />
-                                  <span class="checkmark"></span>
-                                </label>
-                              <% } %>
-                          </div>
+                            <legend class="sr-only">Horas:</legend>
+                            <div class="checkbox-group">
+                                <% for (var i=1; i <=24; i++) { %>
+                                    <div class="checkbox-unit">
+                                        <label class="checkbox-container">
+                                            <input type="checkbox" class="horas" name="horas-input" value="<%= i %>" />
+                                            <span class="checkmark horas"></span>
+                                        </label>
+                                        <small><%= i %></small>
+                                    </div>
+                                <% } %>
+                            </div>
                         </fieldset>
-                      </div>
-
-                      <style>
-                        .checkbox-group {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.checkbox-group label {
-  position: relative;
-  margin-right: 8px;
-  margin-bottom: 8px;
-}
-
-.checkbox-group label input[type="checkbox"] {
-    width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.checkbox-group label .checkmark {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-}
-
-.checkbox-group label input[type="checkbox"]:checked + .checkmark {
-  background-color: #007bff;
-}
-
-.checkbox-group label input[type="checkbox"]:focus + .checkmark {
-  outline: 1px dotted #ccc;
-}
-
-                      </style>
+                    </div>
 
                     <br>
 
@@ -106,17 +69,22 @@
                     </div>
 
                     <div id="porSemanaInputs">
-
                         <div class="form-group">
-                            <label for="diaInicial">Serie día</label>
-
+                            <fieldset id="dias-input">
+                                <legend class="sr-only">Dias:</legend>
+                                <div class="checkbox-group">
+                                    <% for (var i=1; i <=7; i++) { %>
+                                        <div class="checkbox-unit">
+                                            <label class="checkbox-container">
+                                                <input type="checkbox" class="dias" name="dias-input" value="<%= i %>" />
+                                                <span class="checkmark dias"></span>
+                                            </label>
+                                            <small><%= i %></small>
+                                        </div>
+                                    <% } %>
+                                </div>
+                            </fieldset>
                         </div>
-
-                        <div class="form-group">
-                            <label for="horaInicial">Hora inicial (1-24): </label>
-
-                        </div>
-
                     </div>
 
                     <div id="porFechaInputs" style="display:none;">
@@ -149,12 +117,13 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="anho">Año (2023-2100): </label>
-                                    <input type="number" id="anho" class="form-control" name="anho" min="2023" max="2100">
+                                    <input type="number" id="anho" class="form-control" name="anho" min="2023"
+                                        max="2100">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
+
 
                 </div>
             </div>
@@ -188,8 +157,8 @@
                             <td>
                                 <%= data[i].duracion %> minutos
                             </td>
-                            <td><input id="<%= data[i].id %>" class="form-check-input hecho-checkbox" type="checkbox" <% if
-                                    (data[i].hecho) { %>checked<% } %>></td>
+                            <td><input id="<%= data[i].id %>" class="form-check-input hecho-checkbox" type="checkbox" <%
+                                    if (data[i].hecho) { %>checked<% } %>></td>
                         </tr>
                         <% } %>
                 </tbody>
