--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,59 @@
     background-color: white;
     overflow: hidden;
 }
+
+/* ---- Widget de horas y días ---- */
+
+.checkbox-group {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.checkbox-unit {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+.checkbox-group label {
+    position: relative;
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+
+.checkbox-group label input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkbox-group label .checkmark {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #ccc;
+    background-color: #fff;
+}
+
+.checkbox-group label input[type="checkbox"]:checked+.checkmark {
+    background-color: #007bff;
+}
+
+.checkbox-group label input[type="checkbox"]:focus+.checkmark {
+    outline: 1px dotted #ccc;
+}
+
+.dias {
+    width: 50px;
+    height: 50px;
+}
+
+.horas {
+    width: 30px;
+    height: 50px;
+}
