Se agregó botón de clear

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -63,8 +63,8 @@
                     <div class="date-config form-group">
                         <label for="date-dropdown">Configuración de fecha:</label>
                         <select id="date-dropdown" class="form-control" name="date-dropdown">
-                            <option value="por-semana" selected>Por semana</option>
-                            <option value="por-fecha">Por fecha</option>
+                            <option value="por-fecha" selected>Por fecha</option>
+                            <option value="por-semana">Por semana</option>
                         </select>
                     </div>
 
@@ -128,6 +128,14 @@
                 </div>
             </div>
         </section>
+
+        <button class="btn btn-primary">
+
+        </button>
+
+        <button class="btn btn-danger">
+            Clear
+        </button>
 
         <br>
 
