Texto de agregar cambia al cambiar el select de actividad, rutina o nota.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -10,7 +10,7 @@
         <section>
 
             <div class="form-group">
-                <label for="actividad-input">Agregar nueva actividad:</label>
+                <label for="actividad-input">Agregar nueva <span id="texto-entidad">actividad</span>:</label>
                 <input class="form-control" type="text" id="actividad-input" name="actividad-input">
             </div>
 
@@ -130,7 +130,7 @@
         </section>
 
         <button class="btn btn-primary">
-
+            Add
         </button>
 
         <button class="btn btn-danger">
