Checkboxes de horas y días se marcan cuando se arrastra el mouse. Se eliminó cuadrado que escondía ganchito, queda pendiente eliminar el ganchito.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -49,7 +49,6 @@
                                     <div class="checkbox-unit">
                                         <label class="checkbox-container">
                                             <input type="checkbox" class="horas" name="horas-input" value="<%= i %>" />
-                                            <span class="checkmark horas"></span>
                                         </label>
                                         <small><%= i %></small>
                                     </div>
@@ -61,7 +60,7 @@
                     <br>
 
                     <div class="date-config form-group">
-                        <label for="date-dropdown">Configuración de fecha:</label>
+                        <label for="date-dropdown">Configuración:</label>
                         <select id="date-dropdown" class="form-control" name="date-dropdown">
                             <option value="por-fecha" selected>Por fecha</option>
                             <option value="por-semana">Por semana</option>
